--- a/app/assets/stylesheets/jqueryui-datepicker.css
+++ b/app/assets/stylesheets/jqueryui-datepicker.css
@@ -293,7 +293,7 @@
     border: 1px solid #dddddd;
     background: #f6f6f6 url(images/ui-bg_highlight-soft_100_f6f6f6_1x100.png) 50% 50% repeat-x;
     font-weight: bold;
-    color: #008cba;*/
+    color: #008cba;
 }
 .ui-state-default a,
 .ui-state-default a:link,
